--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
 				<td rowspan="2">
 					<img src="images/index_29.jpg" width="13" height="109" alt=""></td>
 				<td colspan="4">
-					<a href="https://drive.google.com/file/d/1Jmy_yq77S49Ioe7nq0ZxrUQTno-4THAf/view?usp=sharing" target="-blank"
-						onmouseover="window.status='https://drive.google.com/file/d/1Jmy_yq77S49Ioe7nq0ZxrUQTno-4THAf/view?usp=sharing';  return true;"
+					<a href="https://www.vcard.link/card/DpbK.vcf" target="-blank"
+						onmouseover="window.status='https://www.vcard.link/card/DpbK.vcf';  return true;"
 						onmouseout="window.status='';  return true;">
-						<img src="images/Ccard-File.jpg" width="172" height="49" border="0" alt="https://drive.google.com/file/d/1Jmy_yq77S49Ioe7nq0ZxrUQTno-4THAf/view?usp=sharing"></a></td>
+						<img src="images/Ccard-File.jpg" width="172" height="49" border="0" alt="https://www.vcard.link/card/DpbK.vcf"></a></td>
 			</tr>
 			<tr>
 				<td colspan="4">
